classDiagram
    %% Enum 定義は docs/MMD03_Enum.mmd を参照
    namespace MoveDomain {
        %% 技データ
        class Move {
            <<Aggregate Root>>
            +MoveId Id
            +string Name
            +string Description
            +TargetType TargetType
            +AttackRange AttackRange
            +int MpCost
            +int ExecutionPriority
            +MoveCategory Category
            +IReadOnlyList~MoveEffect~ Effects
            +Validate() void
            +GetOrderedEffects() IReadOnlyList~MoveEffect~
            -ValidateName(name: string) string
            -ValidateMpCost(mpCost: int) int
        }

        class MoveId {
            <<Value Object>>
            +int Id
            -Validate(id: int) int
        }

        class MoveEffect {
            <<Entity>>
            +MoveEffectId EffectId
            +MoveId MoveId
            +int Sequence
            +MoveEffectType EffectType
            +DamageEffect? Damage
            +AilmentEffect? Ailment
            +BuffEffect? Buff
            +ValidateByType() void
            -ValidateOnlyDamage() void
            -ValidateOnlyAilment() void
            -ValidateOnlyBuff() void
            -ValidateSequence(sequence: int) int
        }

        class MoveEffectId {
            <<Value Object>>
            +int Id
            -Validate(id: int) int
        }

        class DamageEffect {
            <<Value Object>>
            +int HitCount
            +decimal PowerRate
            +int FixedValue
            +decimal CriticalRate
            +ElementType ElementType
            -ValidateHitCount(hitCount: int) int
            -ValidateFixedValue(fixedValue: int) int
            -ValidateRateRange(value: decimal, paramName: string) decimal
            -ValidateNonNegative(value: decimal, paramName: string) decimal
        }

        class AilmentEffect {
            <<Value Object>>
            +AilmentType AilmentType
            +decimal AilmentRate
            -ValidateRateRange(value: decimal) decimal
        }

        class BuffEffect {
            <<Value Object>>
            +BuffStat BuffStat
            +BuffOp BuffOp
            +decimal BuffValue
            +int BuffTurns
            +decimal BuffRate
            +bool CanStack
            -ValidateBuffValue(value: decimal, op: BuffOp) decimal
            -ValidateTurns(turns: int) int
            -ValidateRateRange(value: decimal) decimal
        }

        class IMoveRepository {
            +Task~Move?~ GetMoveAsync(moveId: MoveId)
            +Task~IReadOnlyList~Move~~ GetAllMovesAsync()
        }
    }

    Move *-- MoveId : has
    Move *-- MoveEffect : 1..*
    MoveEffect *-- MoveEffectId : has
    MoveEffect *-- DamageEffect : optional
    MoveEffect *-- AilmentEffect : optional
    MoveEffect *-- BuffEffect : optional
    IMoveRepository ..> Move : loads
